<resources>
    <string name="app_name" translatable="false">montaxi</string>
    <string name="step_two_title">Work anytime, anywhere</string>
    <string name="step_two_desc">you can go online to make money whenever you want.\nMonTaxi is available 24/7</string>
    <string name="recorver_two">Please input the pin you received by sms to *******%1$s</string>
    <string name="turnoffmsg">Please turn online to accept jobs</string>
    <string name="navigation_drawer_open">Open Drawaer</string>
    <string name="navigation_drawer_close">Close Drawaer</string>
    <string name="hi_label">Hi,</string>
    <string name="phone_label">Phone Number</string>
    <string name="pwd_label">Password</string>
    <string name="forgot_label">Forgot password ?</string>
    <string name="signin_label">Sign In</string>
    <string name="new_pwd_label">You have to set a new Password to continue</string>
    <string name="new_pwd">NEW PASSWORD</string>
    <string name="country_label">Country</string>
    <string name="c_new_pwd">CONFIRM NEW PASSWORD</string>
    <string name="update_label">Update</string>
    <string name="recovery_small_label">Recover Account</string>
    <string name="recovery_pin_label">INPUT THE PIN HERE</string>
    <string name="recovery_resendcode_label">Resend code</string>
    <string name="invalid_code_label">Invalid Code</string>
    <string name="confirm_btn">Confirm</string>
    <string name="chat_btn">Chat</string>
    <string name="chat_label">Having trouble with your account talk to an agent.</string>
    <string name="assist_label">Please input your phone number and a comment</string>
    <string name="recorvery">Recover Account</string>
    <string name="comment_label">PLEASE INPUT A COMMENT</string>
    <string name="submit">Submit</string>
    <string name="sent_comment">Comment sent !</string>
    <string name="got_it">Ok, got it !</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="cancel2">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="sign_required">All field is Required</string>
    <string name="password_similar">Password must be same</string>
    <string name="update_password">Update password</string>
    <string name="un_authorize">incorrect credentials</string>
    <string name="verify">Verify</string>
    <string name="new_pwd_1">New password</string>
    <string name="new_pwd_2">Confirm new password</string>
    <string name="code_sent">Code sent</string>
    <string name="comment_sent">Comment sent !</string>
    <string name="comment_notsent">Comment not sent !</string>
    <string name="input_pin_label">INPUT THE PIN HERE</string>
    <string name="input_phone_label_">Please input your Phone Number</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nav_home">Home </string>
    <string name="nav_taxi">My Taxis</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_request">Requests</string>
    <string name="nav_request_true">Requests accepted</string>
    <string name="nav_wallet">My Wallet</string>
    <string name="nav_history">History</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_logout">Log Out</string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="zone_work">Zone d\'activité</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_password">Confirm new password</string>
    <string name="nomatch_password">Password don\'t match</string>
    <string name="upload_text"><b>Hi %1$s,</b> please upload a profile photo </string>
    <string name="update_done">Nice! Password updated</string>
    <string name="update_failed">Password not updated</string>
    <string name="delete_camera_label">Your current profile\nphoto will be deleted</string>
    <string name="cancel_1">Cancel</string>
    <string name="update_1">Update</string>
    <string name="reset_pwd">Reset Password</string>

    <string name="skip">Skip</string>
    <string-array name="titles">
        <item>Start earning with MonTaxi</item>
        <item>Work anytime, anywhere</item>
        <item>Get in-app directions</item>
    </string-array>
    <string-array name="descriptions">
        <item></item>
        <item>you can go online to make money whenever you want.\nMonTaxi is available 24/7</item>
        <item>With in app-navigation,\nfinding each riders location and destination is simple</item>
    </string-array>

    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>