<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/card_in_comment_2"
        android:layout_height="@dimen/card_comment2"
        android:background="@color/commentbg"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/spacing_xlarge"
            android:layout_height="@dimen/spacing_xlarge"
            android:src="@drawable/laugh_icon_2"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="11sp"
            android:lineSpacingExtra="-0.7sp"
            android:text="@string/are_you_sure"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_large"/>
        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/btn_round_red"
            android:text="@string/yes"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_large"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/btn_round_black"
            android:text="@string/no"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.cardview.widget.CardView>