<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/card_comment3"
    android:layout_height="@dimen/card_comment3"
    android:background="@color/commentbg"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textAlignment="center"
                android:lineSpacingExtra="-0.7sp"
                android:layout_centerInParent="true"
                android:text="@string/delete_camera_label"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_round_red"
            android:textSize="13sp"
            android:layout_weight=".9"
            android:textColor="#ffffff"
            android:lineSpacingExtra="-0.7sp"
            android:text="@string/yes"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_round_black"
            android:textSize="13sp"
            android:layout_weight=".9"
            android:textColor="#ffffff"
            android:lineSpacingExtra="-0.7sp"
            android:text="@string/no"
            android:textStyle="bold"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>