<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/taxiapp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="@dimen/spacing_xslarge"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3"
                android:padding="@dimen/spacing_large"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#393939"
                        android:lineSpacingExtra="1.7sp"
                        android:text="@string/hi_label"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:src="@drawable/mon_taxi"
                            />
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/groupe_1700"
                            />
                    </LinearLayout>
                </LinearLayout>

                <!--RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/spacing_xxxlarge"
                        android:src="@drawable/circle_yellow"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/spacing_xlarge"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:src="@drawable/envelope_2"
                        android:layout_marginLeft="@dimen/spacing_xlarge" />
                </RelativeLayout-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:src="@drawable/groupe_1643" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/receivesms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#393939"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="2sp"
                        android:gravity="center_horizontal"
                        android:text="@string/recorver_two"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                android:layout_weight="1">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:textSize="14sp"
                        android:textColor="#393939"
                        android:layout_gravity="bottom"
                        android:lineSpacingExtra="1.7sp"
                        android:text="@string/recovery_small_label"
                        />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:textSize="7sp"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:textColor="#393939"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/recovery_pin_label"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/spacing_xlarge"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:textColor="#393939"
                        android:layout_marginLeft="@dimen/spacing_middle"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/phone_label"
                        />
                    <EditText
                        android:id="@+id/pwd1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_pwd_1"
                        android:inputType="textPassword"
                        android:textSize="12sp"
                        android:textColor="#393939"
                        android:drawablePadding="21dip"
                        android:drawableLeft="@drawable/lock_3"
                        android:drawableRight="@drawable/circle_grey"
                        />
                    <EditText
                        android:id="@+id/pwd2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_pwd_2"
                        android:inputType="textPassword"
                        android:textSize="12sp"
                        android:textColor="#393939"
                        android:drawablePadding="21dip"
                        android:drawableLeft="@drawable/lock_3"
                        android:drawableRight="@drawable/circle_grey"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/spacing_xxxlarge"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/update"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/btn_signin"
                        android:text="@string/update_label"
                        android:layout_gravity="center"
                        android:textSize="13sp"
                        android:textColor="#393939" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".3">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/email_2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/spacing_middle"
                        android:textSize="8sp"
                        android:textColor="#393939"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/chat_label"
                        />
                    <Button
                        android:id="@+id/chat_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_slarge"
                        android:layout_marginLeft="@dimen/spacing_middle"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_signin"
                        android:text="@string/chat_btn"
                        android:textSize="8.3sp"
                        android:textColor="#393939" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>