<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/taxiapp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="@dimen/spacing_xslarge"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3"
                android:padding="@dimen/spacing_large"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#393939"
                        android:lineSpacingExtra="1.7sp"
                        android:text="Hi,"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:src="@drawable/mon_taxi"
                            />
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/groupe_1700"
                            />
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="@dimen/spacing_xxxlarge"
                        android:src="@drawable/ic_assist_2"/>

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="#393939"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/assist_label"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/spacing_slarge"
                        android:textColor="#393939"
                        android:layout_gravity="bottom"
                        android:lineSpacingExtra="1.7sp"
                        android:text="@string/recorvery"
                        />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/spacing_xlarge"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:textColor="#393939"
                        android:layout_marginLeft="@dimen/spacing_middle"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/phone_label"
                        />
                    <EditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_label"
                        android:inputType="phone"
                        android:textSize="12sp"
                        android:textColor="#393939"
                        android:drawablePadding="21dip"
                        android:drawableLeft="@drawable/smartphone_2"
                        android:drawableRight="@drawable/circle_grey"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="6sp"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:textColor="#393939"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/comment_label"
                        />
                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:inputType="textMultiLine"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:background="@drawable/commentshape"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/spacing_xxxlarge"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/btn_signin"
                        android:text="@string/submit"
                        android:layout_gravity="center"
                        android:textSize="8.3sp"
                        android:textColor="#393939" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>